--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   share_plus: ^10.1.4
   get_storage: ^2.1.1
   custom_refresh_indicator: ^4.0.1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
