--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.2+1
+version: 0.0.4+1
 
 environment:
   sdk: ^3.7.0
@@ -46,7 +46,9 @@ dependencies:
   share_plus: ^10.1.4
   get_storage: ^2.1.1
   custom_refresh_indicator: ^4.0.1
-  http: ^1.3.0
+  pdf: ^3.11.3
+  path_provider: ^2.1.5
+  barcode: ^2.2.9
 
 dev_dependencies:
   flutter_test:
