--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   pdf: ^3.11.3
   path_provider: ^2.1.5
   barcode: ^2.2.9
+  url_launcher: ^6.3.2
+  onesignal_flutter: ^5.3.4
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
