--- a/appwrite/package.json
+++ b/appwrite/package.json
@@ -8,7 +8,8 @@
     "start": "node src/main.js"
   },
   "dependencies": {
-    "node-appwrite": "^13.0.0"
+    "node-appwrite": "^13.0.0",
+    "dotenv": "^16.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
